benchmarks/Socrates/source/assertion/AssertionParser.py
# Generated from Assertion.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class AssertionParser ( Parser ):

    grammarFileName = "Assertion.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'TRUE'", "'FA'", "'d0'", "'d2'", "'di'", 
                     "'arg_max'", "'arg_min'", "'lin_inp'", "'lin_out'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'['", "']'", "','", "'.'", "'>='", "'>'", "'<='", 
                     "'<'", "'='", "'!='", "'||'", "'&&'", "'=>'" ]

    symbolicNames = [ "<INVALID>", "TRUE", "FA", "D0", "D2", "DI", "ARG_MAX", 
                      "ARG_MIN", "LIN_INP", "LIN_OUT", "VAR", "INT", "FLT", 
                      "LP", "RP", "LB", "RB", "CM", "DOT", "GE", "GT", "LE", 
                      "LT", "EQ", "NE", "OR", "AND", "IMP", "WS" ]

    RULE_implication = 0
    RULE_disjunction = 1
    RULE_conjunction = 2
    RULE_term = 3
    RULE_func = 4
    RULE_op = 5
    RULE_array = 6
    RULE_num = 7

    ruleNames =  [ "implication", "disjunction", "conjunction", "term", 
                   "func", "op", "array", "num" ]

    EOF = Token.EOF
    TRUE=1
    FA=2
    D0=3
    D2=4
    DI=5
    ARG_MAX=6
    ARG_MIN=7
    LIN_INP=8
    LIN_OUT=9
    VAR=10
    INT=11
    FLT=12
    LP=13
    RP=14
    LB=15
    RB=16
    CM=17
    DOT=18
    GE=19
    GT=20
    LE=21
    LT=22
    EQ=23
    NE=24
    OR=25
    AND=26
    IMP=27
    WS=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ImplicationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(AssertionParser.LP, 0)

        def FA(self):
            return self.getToken(AssertionParser.FA, 0)

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(AssertionParser.VAR)
            else:
                return self.getToken(AssertionParser.VAR, i)

        def DOT(self):
            return self.getToken(AssertionParser.DOT, 0)

        def disjunction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AssertionParser.DisjunctionContext)
            else:
                return self.getTypedRuleContext(AssertionParser.DisjunctionContext,i)


        def IMP(self):
            return self.getToken(AssertionParser.IMP, 0)

        def RP(self):
            return self.getToken(AssertionParser.RP, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(AssertionParser.CM)
            else:
                return self.getToken(AssertionParser.CM, i)

        def getRuleIndex(self):
            return AssertionParser.RULE_implication

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImplication" ):
                listener.enterImplication(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImplication" ):
                listener.exitImplication(self)




    def implication(self):

        localctx = AssertionParser.ImplicationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_implication)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.match(AssertionParser.LP)
            self.state = 17
            self.match(AssertionParser.FA)
            self.state = 18
            self.match(AssertionParser.VAR)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AssertionParser.CM:
                self.state = 19
                self.match(AssertionParser.CM)
                self.state = 20
                self.match(AssertionParser.VAR)
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 26
            self.match(AssertionParser.DOT)
            self.state = 27
            self.disjunction()
            self.state = 28
            self.match(AssertionParser.IMP)
            self.state = 29
            self.disjunction()
            self.state = 30
            self.match(AssertionParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DisjunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conjunction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AssertionParser.ConjunctionContext)
            else:
                return self.getTypedRuleContext(AssertionParser.ConjunctionContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(AssertionParser.OR)
            else:
                return self.getToken(AssertionParser.OR, i)

        def getRuleIndex(self):
            return AssertionParser.RULE_disjunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDisjunction" ):
                listener.enterDisjunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDisjunction" ):
                listener.exitDisjunction(self)




    def disjunction(self):

        localctx = AssertionParser.DisjunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_disjunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.conjunction()
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AssertionParser.OR:
                self.state = 33
                self.match(AssertionParser.OR)
                self.state = 34
                self.conjunction()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConjunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AssertionParser.TermContext)
            else:
                return self.getTypedRuleContext(AssertionParser.TermContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(AssertionParser.AND)
            else:
                return self.getToken(AssertionParser.AND, i)

        def getRuleIndex(self):
            return AssertionParser.RULE_conjunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConjunction" ):
                listener.enterConjunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConjunction" ):
                listener.exitConjunction(self)




    def conjunction(self):

        localctx = AssertionParser.ConjunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_conjunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.term()
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AssertionParser.AND:
                self.state = 41
                self.match(AssertionParser.AND)
                self.state = 42
                self.term()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(AssertionParser.TRUE, 0)

        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AssertionParser.FuncContext)
            else:
                return self.getTypedRuleContext(AssertionParser.FuncContext,i)


        def op(self):
            return self.getTypedRuleContext(AssertionParser.OpContext,0)


        def num(self):
            return self.getTypedRuleContext(AssertionParser.NumContext,0)


        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(AssertionParser.VAR)
            else:
                return self.getToken(AssertionParser.VAR, i)

        def LB(self, i:int=None):
            if i is None:
                return self.getTokens(AssertionParser.LB)
            else:
                return self.getToken(AssertionParser.LB, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(AssertionParser.INT)
            else:
                return self.getToken(AssertionParser.INT, i)

        def RB(self, i:int=None):
            if i is None:
                return self.getTokens(AssertionParser.RB)
            else:
                return self.getToken(AssertionParser.RB, i)

        def EQ(self):
            return self.getToken(AssertionParser.EQ, 0)

        def array(self):
            return self.getTypedRuleContext(AssertionParser.ArrayContext,0)


        def getRuleIndex(self):
            return AssertionParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = AssertionParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_term)
        try:
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.match(AssertionParser.TRUE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.func()
                self.state = 50
                self.op()
                self.state = 51
                self.num()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 53
                self.func()
                self.state = 54
                self.op()
                self.state = 55
                self.func()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.match(AssertionParser.VAR)
                self.state = 58
                self.match(AssertionParser.LB)
                self.state = 59
                self.match(AssertionParser.INT)
                self.state = 60
                self.match(AssertionParser.RB)
                self.state = 61
                self.op()
                self.state = 62
                self.num()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 64
                self.match(AssertionParser.VAR)
                self.state = 65
                self.match(AssertionParser.LB)
                self.state = 66
                self.match(AssertionParser.INT)
                self.state = 67
                self.match(AssertionParser.RB)
                self.state = 68
                self.op()
                self.state = 69
                self.match(AssertionParser.VAR)
                self.state = 70
                self.match(AssertionParser.LB)
                self.state = 71
                self.match(AssertionParser.INT)
                self.state = 72
                self.match(AssertionParser.RB)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 74
                self.match(AssertionParser.VAR)
                self.state = 75
                self.match(AssertionParser.EQ)
                self.state = 76
                self.array()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def D0(self):
            return self.getToken(AssertionParser.D0, 0)

        def LP(self):
            return self.getToken(AssertionParser.LP, 0)

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(AssertionParser.VAR)
            else:
                return self.getToken(AssertionParser.VAR, i)

        def CM(self):
            return self.getToken(AssertionParser.CM, 0)

        def RP(self):
            return self.getToken(AssertionParser.RP, 0)

        def D2(self):
            return self.getToken(AssertionParser.D2, 0)

        def DI(self):
            return self.getToken(AssertionParser.DI, 0)

        def ARG_MAX(self):
            return self.getToken(AssertionParser.ARG_MAX, 0)

        def ARG_MIN(self):
            return self.getToken(AssertionParser.ARG_MIN, 0)

        def LIN_INP(self):
            return self.getToken(AssertionParser.LIN_INP, 0)

        def array(self):
            return self.getTypedRuleContext(AssertionParser.ArrayContext,0)


        def LIN_OUT(self):
            return self.getToken(AssertionParser.LIN_OUT, 0)

        def getRuleIndex(self):
            return AssertionParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)




    def func(self):

        localctx = AssertionParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AssertionParser.D0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.match(AssertionParser.D0)
                self.state = 80
                self.match(AssertionParser.LP)
                self.state = 81
                self.match(AssertionParser.VAR)
                self.state = 82
                self.match(AssertionParser.CM)
                self.state = 83
                self.match(AssertionParser.VAR)
                self.state = 84
                self.match(AssertionParser.RP)
                pass
            elif token in [AssertionParser.D2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.match(AssertionParser.D2)
                self.state = 86
                self.match(AssertionParser.LP)
                self.state = 87
                self.match(AssertionParser.VAR)
                self.state = 88
                self.match(AssertionParser.CM)
                self.state = 89
                self.match(AssertionParser.VAR)
                self.state = 90
                self.match(AssertionParser.RP)
                pass
            elif token in [AssertionParser.DI]:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.match(AssertionParser.DI)
                self.state = 92
                self.match(AssertionParser.LP)
                self.state = 93
                self.match(AssertionParser.VAR)
                self.state = 94
                self.match(AssertionParser.CM)
                self.state = 95
                self.match(AssertionParser.VAR)
                self.state = 96
                self.match(AssertionParser.RP)
                pass
            elif token in [AssertionParser.ARG_MAX]:
                self.enterOuterAlt(localctx, 4)
                self.state = 97
                self.match(AssertionParser.ARG_MAX)
                self.state = 98
                self.match(AssertionParser.LP)
                self.state = 99
                self.match(AssertionParser.VAR)
                self.state = 100
                self.match(AssertionParser.RP)
                pass
            elif token in [AssertionParser.ARG_MIN]:
                self.enterOuterAlt(localctx, 5)
                self.state = 101
                self.match(AssertionParser.ARG_MIN)
                self.state = 102
                self.match(AssertionParser.LP)
                self.state = 103
                self.match(AssertionParser.VAR)
                self.state = 104
                self.match(AssertionParser.RP)
                pass
            elif token in [AssertionParser.LIN_INP]:
                self.enterOuterAlt(localctx, 6)
                self.state = 105
                self.match(AssertionParser.LIN_INP)
                self.state = 106
                self.match(AssertionParser.LP)
                self.state = 107
                self.match(AssertionParser.VAR)
                self.state = 108
                self.match(AssertionParser.CM)
                self.state = 109
                self.array()
                self.state = 110
                self.match(AssertionParser.RP)
                pass
            elif token in [AssertionParser.LIN_OUT]:
                self.enterOuterAlt(localctx, 7)
                self.state = 112
                self.match(AssertionParser.LIN_OUT)
                self.state = 113
                self.match(AssertionParser.LP)
                self.state = 114
                self.match(AssertionParser.VAR)
                self.state = 115
                self.match(AssertionParser.CM)
                self.state = 116
                self.array()
                self.state = 117
                self.match(AssertionParser.RP)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GE(self):
            return self.getToken(AssertionParser.GE, 0)

        def GT(self):
            return self.getToken(AssertionParser.GT, 0)

        def LE(self):
            return self.getToken(AssertionParser.LE, 0)

        def LT(self):
            return self.getToken(AssertionParser.LT, 0)

        def EQ(self):
            return self.getToken(AssertionParser.EQ, 0)

        def NE(self):
            return self.getToken(AssertionParser.NE, 0)

        def getRuleIndex(self):
            return AssertionParser.RULE_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOp" ):
                listener.enterOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOp" ):
                listener.exitOp(self)




    def op(self):

        localctx = AssertionParser.OpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AssertionParser.GE) | (1 << AssertionParser.GT) | (1 << AssertionParser.LE) | (1 << AssertionParser.LT) | (1 << AssertionParser.EQ) | (1 << AssertionParser.NE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(AssertionParser.LB, 0)

        def num(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AssertionParser.NumContext)
            else:
                return self.getTypedRuleContext(AssertionParser.NumContext,i)


        def RB(self):
            return self.getToken(AssertionParser.RB, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(AssertionParser.CM)
            else:
                return self.getToken(AssertionParser.CM, i)

        def getRuleIndex(self):
            return AssertionParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)




    def array(self):

        localctx = AssertionParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(AssertionParser.LB)
            self.state = 124
            self.num()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AssertionParser.CM:
                self.state = 125
                self.match(AssertionParser.CM)
                self.state = 126
                self.num()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(AssertionParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(AssertionParser.INT, 0)

        def FLT(self):
            return self.getToken(AssertionParser.FLT, 0)

        def getRuleIndex(self):
            return AssertionParser.RULE_num

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNum" ):
                listener.enterNum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNum" ):
                listener.exitNum(self)




    def num(self):

        localctx = AssertionParser.NumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_num)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            _la = self._input.LA(1)
            if not(_la==AssertionParser.INT or _la==AssertionParser.FLT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





